--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Cursos de DevOps da Alura</title>
+    <title>Cursos DevOps na Alura</title>
 </head>
 <body>
     <ul>
@@ -10,6 +10,7 @@
         <li>Docker</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software </li>
+        <li>Kubernetes</li>
     </ul>
 </body>
 </html>
